<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barcode"
        android:autofillHints="Shaon"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:singleLine="true"
        android:maxLength="10"
        android:hint="@string/hint_enter_your_name"
        />


    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="InvalidId" />




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:text="@string/clear"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        />


</LinearLayout>